# isaac-1

./: CMakeLists.txt  README.md  index.html  params.json
bench/: blas.cpp
examples/: indexing.cpp
include/isaac/: array.h  types.h  value_scalar.h
include/isaac/algorithms/: householder.h  lasr.h
include/isaac/common/: expression_type.h
include/isaac/driver/: backend.h  buffer.h  command_queue.h  context.h  device.h  dispatch.h
include/isaac/jit/generation/: gemm.h
include/isaac/kernels/: binder.h
include/isaac/runtime/: profiles.h
include/isaac/symbolic/: expression.h
lib/: CMakeLists.txt  array.cpp  value_scalar.cpp
lib/algorithms/: householder.cpp  lasr.cpp
lib/api/blas/: clBLAS.cpp  cublas.cpp
lib/driver/: backend.cpp  check.cpp  command_queue.cpp  context.cpp  device.cpp  dispatch.cpp  kernel.cpp  program.cpp
lib/jit/generation/: elementwise_2d.cpp  gemm.cpp  matrix_product.cpp  reduce_1d.cpp
lib/jit/generation/engine/: stream.cpp
lib/kernels/: binder.cpp  parse.cpp
lib/kernels/templates/: axpy.cpp  base.cpp  gemm.cpp  gemv.cpp
lib/runtime/: database.cpp  profiles.cpp
lib/symbolic/: execute.cpp  expression.cpp
python/: setup.py
python/src/bind/: core.cpp  driver.cpp  kernels.cpp
tests/android/: test.cpp
tests/api/blas/: blas-1.cpp
tests/common/: api.hpp
tests/core/: CMakeLists.txt  axpy.cpp  common.hpp  dot.cpp  gemm.cpp  gemv.cpp  ger.cpp  gesvd.cpp
tests/cpp/: CMakeLists.txt  common.hpp
tests/cpp/algorithms/: CMakeLists.txt  gesvd.cpp
tests/python/: old.py  svd.py  test.py
tune/android/tune/: tools.py  tune.py
(+18 files in other folders)
